--- a/index.html
+++ b/index.html
@@ -78,9 +78,14 @@
                     <span class="score-label">Punkte:</span>
                     <span class="score-value" id="scoreValue">0</span>
                 </div>
-                <button class="back-btn" id="backBtn">
-                    <i class="fas fa-arrow-left"></i> Zurück
-                </button>
+                <div class="header-buttons">
+                    <button class="back-btn" id="backBtn">
+                        <i class="fas fa-arrow-left"></i> Zurück
+                    </button>
+                    <button class="end-btn" id="endBtn">
+                        <i class="fas fa-stop"></i> Beenden
+                    </button>
+                </div>
             </div>
 
             <!-- Question Area -->
