Kennzeichen korrigiert, Wappen hinzugefügt, Back-Button zu X geändert

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     <span class="score-value" id="scoreValue">0</span>
                 </div>
                 <div class="header-buttons">
-                    <button class="back-btn" id="backBtn">
-                        <i class="fas fa-arrow-left"></i> Zurück
+                    <button class="back-btn" id="backBtn" title="Zurück">
+                        <i class="fas fa-times"></i>
                     </button>
                     <button class="end-btn" id="endBtn">
                         <i class="fas fa-stop"></i> Beenden
