Fix: Spiele auf Startseite, Beenden-Button im Header Layout

--- a/index.html
+++ b/index.html
@@ -36,15 +36,8 @@
                 <p>Teste dein Wissen über Österreich. Wähle ein Spiel und einen Schwierigkeitsgrad.</p>
             </div>
 
-            <!-- Start Button -->
-            <div class="start-button-section" id="startButtonSection">
-                <button class="start-game-btn" id="startGameBtn">
-                    <i class="fas fa-play"></i> Spiel starten
-                </button>
-            </div>
-
             <!-- Game Selection -->
-            <div class="selection-section" id="gameSelectionSection" style="display: none;">
+            <div class="selection-section" id="gameSelectionSection">
                 <h3>Wähle ein Spiel:</h3>
                 <div class="button-grid">
                     <button class="game-btn" data-game="license-plates">
