Footer mit Commit-Zeit von GitHub API hinzugefügt

--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
         </div>
     </main>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <p>Version: <span id="commitTime">wird geladen...</span></p>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
