Spiel-Start: erst mit Button starten, nicht bei Schwierigkeitsauswahl

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                         <span>Profi-Modus<br><small>Freie Eingabe</small></span>
                     </button>
                 </div>
+                <div class="start-game-section">
+                    <button class="start-btn" id="startBtn">
+                        <i class="fas fa-play"></i> Spiel starten
+                    </button>
+                </div>
             </div>
         </div>
 
