Fix: Spielstart-Button Logik und UI-Layout korrigiert

--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
                         <span>Profi-Modus<br><small>Freie Eingabe</small></span>
                     </button>
                 </div>
-                <div class="start-game-section">
-                    <button class="start-btn" id="startBtn">
-                        <i class="fas fa-play"></i> Spiel starten
-                    </button>
-                </div>
+            </div>
+
+            <!-- Start Game Button -->
+            <div class="start-game-section" id="startGameSection">
+                <button class="start-btn" id="startBtn">
+                    <i class="fas fa-play"></i> Spiel starten
+                </button>
             </div>
         </div>
 
