Feat: International capitals mode + world_capitals data; capitals as MC

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                         <i class="fas fa-university"></i>
                         <span>Hauptstädte quizzen</span>
                     </button>
+                    <button class="game-btn" data-game="world-capitals">
+                        <i class="fas fa-globe"></i>
+                        <span>Internationale Hauptstädte</span>
+                    </button>
                     <button class="game-btn" data-game="population">
                         <i class="fas fa-users"></i>
                         <span>Einwohner vergleichen</span>
@@ -124,6 +128,7 @@
         </div>
     </footer>
 
+    <script src="world_capitals.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
