Implementiere Multi-Language-Antworten und Tippfehler-Toleranz mit Settings-Modal

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <button class="theme-toggle" id="themeToggle" aria-label="Theme toggle">
                 <i class="fas fa-moon"></i>
             </button>
+            <button class="settings-btn" id="settingsBtn" aria-label="Einstellungen">
+                <i class="fas fa-cog"></i>
+            </button>
         </div>
     </nav>
 
