Füge Neustart-Button und -Funktion für alle Spiele hinzu

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                     <span class="score-label">Punkte:</span>
                     <span class="score-value" id="scoreValue">0</span>
                 </div>
+                <button class="restart-btn" id="restartBtn" title="Neustart">
+                    <i class="fas fa-rotate-right"></i>
+                </button>
                 <button class="back-btn" id="backBtn" title="Zurück">
                     <i class="fas fa-times"></i>
                 </button>
