Füge 'Kombiniert'-Schwierigkeitsgrad für Hauptstädte hinzu (Eingabe + Antworten-anzeigen Button)

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                         <i class="fas fa-clone"></i>
                         <span>Quiz-Modus<br><small>4 Antwort-Optionen</small></span>
                     </button>
+                    <button class="difficulty-btn" data-difficulty="kombiniert" id="combinedBtn" style="display: none;">
+                        <i class="fas fa-edit"></i>
+                        <span>Kombiniert<br><small>Eingabe + Hilfe</small></span>
+                    </button>
                     <button class="difficulty-btn" data-difficulty="profi">
                         <i class="fas fa-keyboard"></i>
                         <span>Profi-Modus<br><small>Freie Eingabe</small></span>
