Hilfe-Button und Hilfe-Seite hinzugefügt

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
             <h1 class="navbar-title">
                 <i class="fas fa-map-location-dot"></i> Österreich-Quiz
             </h1>
-            <button class="theme-toggle" id="themeToggle" aria-label="Theme toggle">
-                <i class="fas fa-moon"></i>
-            </button>
-            <button class="settings-btn" id="settingsBtn" aria-label="Einstellungen">
-                <i class="fas fa-cog"></i>
-            </button>
+            <div class="navbar-buttons">
+                <a href="help.html" class="help-btn" aria-label="Hilfe">
+                    <i class="fas fa-question-circle"></i>
+                </a>
+                <button class="theme-toggle" id="themeToggle" aria-label="Theme toggle">
+                    <i class="fas fa-moon"></i>
+                </button>
+                <button class="settings-btn" id="settingsBtn" aria-label="Einstellungen">
+                    <i class="fas fa-cog"></i>
+                </button>
+            </div>
         </div>
     </nav>
 
