Titel auf 'AUT Quiz' geändert

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Österreich-Quiz</title>
+    <title>AUT Quiz</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
     <nav class="navbar">
         <div class="navbar-content">
             <h1 class="navbar-title">
-                <i class="fas fa-map-location-dot"></i> Österreich-Quiz
+                <i class="fas fa-map-location-dot"></i> AUT Quiz
             </h1>
             <div class="navbar-buttons">
                 <a href="help.html" class="help-btn" aria-label="Hilfe">
