--- a/help.html
+++ b/help.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hilfe - Österreich-Quiz</title>
+    <title>Hilfe - AUT Quiz</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
@@ -129,7 +129,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>Österreich-Quiz – Lerne spielend!</p>
+            <p>AUT Quiz – Lerne spielend!</p>
         </div>
     </footer>
 
