Header-Titel auf help.html angepasst

--- a/help.html
+++ b/help.html
@@ -19,7 +19,7 @@
     <nav class="navbar">
         <div class="navbar-content">
             <h1 class="navbar-title">
-                <i class="fas fa-question-circle"></i> Hilfe
+                <i class="fas fa-question-circle"></i> AUT Quiz - Hilfe
             </h1>
             <div class="navbar-buttons">
                 <a href="index.html" class="help-btn" aria-label="Zurück zum Spiel" style="background-color: var(--primary-color); border-color: var(--primary-color); color: white;">
