Dynamisches Punktesystem: 100P ohne Tipp, -30P pro Tipp, 3 Tipps pro Frage

--- a/help.html
+++ b/help.html
@@ -95,10 +95,24 @@
             <h3><i class="fas fa-star"></i> Punktesystem</h3>
             
             <div class="help-section">
+                <h4><i class="fas fa-coins"></i> Dynamische Punkte</h4>
+                <p>Je weniger Tipps du verwendest, desto mehr Punkte bekommst du!</p>
                 <ul>
-                    <li><strong>Richtige Antwort:</strong> +1 Punkt</li>
+                    <li><strong>Ohne Tipp:</strong> 100 Punkte</li>
+                    <li><strong>1 Tipp verwendet:</strong> 70 Punkte</li>
+                    <li><strong>2 Tipps verwendet:</strong> 40 Punkte</li>
+                    <li><strong>3 Tipps verwendet:</strong> 10 Punkte</li>
                     <li><strong>Falsche Antwort:</strong> 0 Punkte</li>
-                    <li><strong>Tipp verwenden:</strong> -10 Punkte (mind. 10 Punkte erforderlich)</li>
+                </ul>
+            </div>
+
+            <div class="help-section">
+                <h4><i class="fas fa-lightbulb"></i> Tipp-System</h4>
+                <p>Du hast pro Frage bis zu 3 Tipps zur Verfügung:</p>
+                <ul>
+                    <li><strong>Tipp 1:</strong> Allgemeiner Hinweis (z.B. Bundesland, Anfangsbuchstabe)</li>
+                    <li><strong>Tipp 2:</strong> Genauerer Hinweis + Wappen bei Kennzeichen</li>
+                    <li><strong>Tipp 3:</strong> Starker Hinweis (z.B. Wortanfang)</li>
                 </ul>
             </div>
         </div>
