--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <!-- Hint Button -->
             <div class="hint-section">
                 <button class="hint-btn" id="hintBtn">
-                    <i class="fas fa-lightbulb"></i> Tipp (-10 Punkte)
+                    <i class="fas fa-lightbulb"></i> Tipp (3 verfügbar)
                 </button>
             </div>
 
