Header: Expandierbares Hamburger-Menü mit Dropdown

--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
             <h1 class="navbar-title">
                 <i class="fas fa-map-location-dot"></i> AUT Quiz
             </h1>
-            <div class="navbar-buttons">
-                <a href="help.html" class="help-btn" aria-label="Hilfe">
-                    <i class="fas fa-question-circle"></i>
-                </a>
-                <button class="theme-toggle" id="themeToggle" aria-label="Theme toggle">
-                    <i class="fas fa-moon"></i>
+            <div class="navbar-menu">
+                <button class="menu-toggle" id="menuToggle" aria-label="Menü">
+                    <i class="fas fa-bars"></i>
                 </button>
-                <button class="settings-btn" id="settingsBtn" aria-label="Einstellungen">
-                    <i class="fas fa-cog"></i>
-                </button>
+                <div class="menu-dropdown" id="menuDropdown">
+                    <a href="help.html" class="menu-item">
+                        <i class="fas fa-question-circle"></i> Hilfe
+                    </a>
+                    <button class="menu-item" id="themeToggle">
+                        <i class="fas fa-moon"></i> <span id="themeText">Dark Mode</span>
+                    </button>
+                    <button class="menu-item" id="settingsBtn">
+                        <i class="fas fa-cog"></i> Einstellungen
+                    </button>
+                </div>
             </div>
         </div>
     </nav>
