Fix: Menü-Button sichtbar machen mit display flex important

--- a/help.html
+++ b/help.html
@@ -22,14 +22,14 @@
                 <i class="fas fa-question-circle"></i> AUT Quiz - Hilfe
             </h1>
             <div class="navbar-menu">
-                <button class="menu-toggle" id="menuToggle" aria-label="Menü">
+                <button class="menu-toggle" id="menuToggle" aria-label="Menü" type="button">
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="menu-dropdown" id="menuDropdown">
                     <a href="index.html" class="menu-item">
                         <i class="fas fa-home"></i> Zurück zum Spiel
                     </a>
-                    <button class="menu-item" id="themeToggle">
+                    <button class="menu-item" id="themeToggle" type="button">
                         <i class="fas fa-moon"></i> <span id="themeText">Dark Mode</span>
                     </button>
                 </div>
