--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 <i class="fas fa-map-location-dot"></i> AUT Quiz
             </h1>
             <div class="navbar-menu">
-                <button class="menu-toggle" id="menuToggle" aria-label="Menü">
+                <button class="menu-toggle" id="menuToggle" aria-label="Menü" type="button">
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="menu-dropdown" id="menuDropdown">
                     <a href="help.html" class="menu-item">
                         <i class="fas fa-question-circle"></i> Hilfe
                     </a>
-                    <button class="menu-item" id="themeToggle">
+                    <button class="menu-item" id="themeToggle" type="button">
                         <i class="fas fa-moon"></i> <span id="themeText">Dark Mode</span>
                     </button>
-                    <button class="menu-item" id="settingsBtn">
+                    <button class="menu-item" id="settingsBtn" type="button">
                         <i class="fas fa-cog"></i> Einstellungen
                     </button>
                 </div>
