Footer: Zeigt Commit-Zeit und geänderte Dateien, ohne Fallback

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>Version: <span id="commitTime">wird geladen...</span></p>
+            <p id="commitInfo">Version wird geladen...</p>
         </div>
     </footer>
 
