--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="menu-dropdown" id="menuDropdown">
+                    <a href="points.html" class="menu-item">
+                        <i class="fas fa-coins"></i> <span>Punkte: <span id="menuPointsDisplay">0</span></span>
+                    </a>
                     <a href="help.html" class="menu-item">
                         <i class="fas fa-question-circle"></i> Hilfe
                     </a>
-                    <button class="menu-item" id="themeToggle" type="button">
-                        <i class="fas fa-moon"></i> <span id="themeText">Dark Mode</span>
-                    </button>
                     <button class="menu-item" id="settingsBtn" type="button">
                         <i class="fas fa-cog"></i> Einstellungen
                     </button>
