Implement comprehensive hint system with multiple hint types
- Add hint dropdown menu with 6 different hint types:
  - 50/50: Remove 2 wrong answers (multiple choice only)
  - Remove One: Remove 1 wrong answer (multiple choice only)
  - First Letter: Show the first letter of the answer (input mode)
  - Random Letter: Show a random letter with position (input mode)
  - Length: Show the answer length (input mode)
  - Coat of Arms: Show the state coat of arms (capitals mode)

- Implement hint availability based on game mode:
  - Quiz mode: 50/50, removeOne available
  - Input mode: firstLetter, randomLetter, length available
  - Capitals: coat available

- Track used hints per question (each type can only be used once)
- Reset hints when loading new questions
- Update hint display with remaining count and cost

--- a/index.html
+++ b/index.html
@@ -122,11 +122,40 @@
             <!-- Answer Area -->
             <div id="answerArea"></div>
 
-            <!-- Hint Button -->
+            <!-- Hint Section with Dropdown -->
             <div class="hint-section">
-                <button class="hint-btn" id="hintBtn">
-                    <i class="fas fa-lightbulb"></i> Tipp (3 verfügbar)
-                </button>
+                <div class="hint-dropdown-container">
+                    <button class="hint-btn" id="hintBtn" type="button">
+                        <i class="fas fa-lightbulb"></i> Tipps <span id="hintCount">(3 verfügbar)</span>
+                        <i class="fas fa-chevron-down hint-arrow"></i>
+                    </button>
+                    <div class="hint-dropdown" id="hintDropdown">
+                        <button class="hint-option" data-hint="5050" type="button">
+                            <i class="fas fa-divide"></i> 50/50
+                            <small>Entfernt 2 falsche Antworten</small>
+                        </button>
+                        <button class="hint-option" data-hint="removeOne" type="button">
+                            <i class="fas fa-minus-circle"></i> Eine weg
+                            <small>Entfernt 1 falsche Antwort</small>
+                        </button>
+                        <button class="hint-option" data-hint="firstLetter" type="button">
+                            <i class="fas fa-font"></i> Anfangsbuchstabe
+                            <small>Zeigt den ersten Buchstaben</small>
+                        </button>
+                        <button class="hint-option" data-hint="randomLetter" type="button">
+                            <i class="fas fa-random"></i> Zufälliger Buchstabe
+                            <small>Zeigt einen zufälligen Buchstaben</small>
+                        </button>
+                        <button class="hint-option" data-hint="length" type="button">
+                            <i class="fas fa-ruler"></i> Länge
+                            <small>Zeigt die Anzahl der Buchstaben</small>
+                        </button>
+                        <button class="hint-option" data-hint="coat" type="button">
+                            <i class="fas fa-shield-alt"></i> Wappen
+                            <small>Zeigt das Bundesland-Wappen</small>
+                        </button>
+                    </div>
+                </div>
             </div>
 
             <!-- Feedback Area -->
