Tipps: Individuelle Preise und Balance-Anzeige

--- a/index.html
+++ b/index.html
@@ -126,31 +126,40 @@
             <div class="hint-section">
                 <div class="hint-header">
                     <i class="fas fa-lightbulb"></i> Tipps <span id="hintCount">(3 verfügbar)</span>
+                    <span class="hint-balance" id="hintBalance" style="display: none;">
+                        <i class="fas fa-coins"></i> <span id="balanceAmount">0</span>P
+                    </span>
                 </div>
                 <div class="hint-buttons-grid">
                     <button class="hint-btn-compact" data-hint="5050" type="button">
                         <i class="fas fa-divide"></i>
                         <span class="hint-label">50/50</span>
+                        <span class="hint-price" data-price="30"></span>
                     </button>
                     <button class="hint-btn-compact" data-hint="removeOne" type="button">
                         <i class="fas fa-minus-circle"></i>
                         <span class="hint-label">Eine weg</span>
+                        <span class="hint-price" data-price="20"></span>
                     </button>
                     <button class="hint-btn-compact" data-hint="firstLetter" type="button">
                         <i class="fas fa-font"></i>
                         <span class="hint-label">Anfangsbuchstabe</span>
+                        <span class="hint-price" data-price="15"></span>
                     </button>
                     <button class="hint-btn-compact" data-hint="randomLetter" type="button">
                         <i class="fas fa-random"></i>
                         <span class="hint-label">Zufälliger Buchstabe</span>
+                        <span class="hint-price" data-price="15"></span>
                     </button>
                     <button class="hint-btn-compact" data-hint="length" type="button">
                         <i class="fas fa-ruler"></i>
                         <span class="hint-label">Länge</span>
+                        <span class="hint-price" data-price="10"></span>
                     </button>
                     <button class="hint-btn-compact" data-hint="coat" type="button">
                         <i class="fas fa-shield-alt"></i>
                         <span class="hint-label">Wappen</span>
+                        <span class="hint-price" data-price="15"></span>
                     </button>
                 </div>
             </div>
