Fix: Kompaktes Balance-Widget mit verbesserter Drag-Haptik

--- a/index.html
+++ b/index.html
@@ -175,15 +175,8 @@
 
     <!-- Floating Balance Widget -->
     <div id="floatingBalance" class="floating-balance" style="display: none;">
-        <div class="floating-balance-handle">
-            <i class="fas fa-grip-vertical"></i>
-        </div>
-        <div class="floating-balance-content">
-            <i class="fas fa-wallet"></i>
-            <span class="floating-balance-label">Guthaben</span>
-            <span class="floating-balance-amount" id="floatingBalanceAmount">0</span>
-            <span class="floating-balance-currency">P</span>
-        </div>
+        <i class="fas fa-coins"></i>
+        <span id="floatingBalanceAmount">0</span>
     </div>
 
     <!-- Footer -->
