Einstellungen in eigene Seite umgewandelt (settings.html) mit Auto-Save-Funktion

--- a/points.html
+++ b/points.html
@@ -23,9 +23,9 @@
                     <a href="help.html" class="menu-item">
                         <i class="fas fa-question-circle"></i> Hilfe
                     </a>
-                    <button class="menu-item" id="settingsBtn" type="button">
+                    <a href="settings.html" class="menu-item">
                         <i class="fas fa-cog"></i> Einstellungen
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
