--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="navbar-content">
-            <h1 class="navbar-title">
+            <a href="index.html" class="navbar-brand">
                 <i class="fas fa-map-location-dot"></i> AUT Quiz
-            </h1>
+            </a>
             <div class="navbar-menu">
                 <button class="menu-toggle" id="menuToggle" aria-label="Menü" type="button">
                     <i class="fas fa-bars"></i>
@@ -186,6 +186,29 @@
         <i class="fas fa-coins"></i>
         <span id="floatingBalanceAmount">0</span>
     </div>
+
+    <!-- Bottom Navigation (Mobile) -->
+    <nav class="bottom-nav" id="bottomNav">
+        <div class="bottom-nav-content">
+            <a href="index.html" class="bottom-nav-item current">
+                <i class="fas fa-home"></i>
+                <span>Spiel</span>
+            </a>
+            <a href="points.html" class="bottom-nav-item">
+                <i class="fas fa-coins"></i>
+                <span>Punkte</span>
+                <span class="bottom-nav-badge" id="bottomNavPoints">0</span>
+            </a>
+            <a href="help.html" class="bottom-nav-item">
+                <i class="fas fa-question-circle"></i>
+                <span>Hilfe</span>
+            </a>
+            <a href="settings.html" class="bottom-nav-item">
+                <i class="fas fa-cog"></i>
+                <span>Einstellungen</span>
+            </a>
+        </div>
+    </nav>
 
     <!-- Footer -->
     <footer class="footer">
