Bottom Navigation: Erweiterte Einstellungen hinzugefügt
- Neue Einstellungs-Sektion für Bottom Navigation
- Toggle: Bottom Navigation anzeigen/verbergen
- Toggle: Fixiert am Bildschirm oder statisch
- Größenauswahl: Klein, Normal, Groß (mit CSS-Klassen)
- Schaltflächen-Auswahl: Individuell wählen welche Buttons angezeigt werden
- Alle Einstellungen werden in localStorage gespeichert
- Live-Vorschau der Änderungen auf der Settings-Seite
- CSS für verschiedene Größenvarianten (size-small, size-normal, size-large)
- CSS für statische Position (position-static)
- data-nav Attribute für alle Bottom Nav Items
- Checkbox-Labels mit Icons für bessere UX
- applyBottomNavSettings() Funktion auf allen Seiten

--- a/index.html
+++ b/index.html
@@ -190,20 +190,20 @@
     <!-- Bottom Navigation (Mobile) -->
     <nav class="bottom-nav" id="bottomNav">
         <div class="bottom-nav-content">
-            <a href="index.html" class="bottom-nav-item current">
+            <a href="index.html" class="bottom-nav-item current" data-nav="home">
                 <i class="fas fa-home"></i>
                 <span>Spiel</span>
             </a>
-            <a href="points.html" class="bottom-nav-item">
+            <a href="points.html" class="bottom-nav-item" data-nav="points">
                 <i class="fas fa-coins"></i>
                 <span>Punkte</span>
                 <span class="bottom-nav-badge" id="bottomNavPoints">0</span>
             </a>
-            <a href="help.html" class="bottom-nav-item">
+            <a href="help.html" class="bottom-nav-item" data-nav="help">
                 <i class="fas fa-question-circle"></i>
                 <span>Hilfe</span>
             </a>
-            <a href="settings.html" class="bottom-nav-item">
+            <a href="settings.html" class="bottom-nav-item" data-nav="settings">
                 <i class="fas fa-cog"></i>
                 <span>Einstellungen</span>
             </a>
