Mobile Optimierung: Punkte-Seite Karten schmaler + Zoom-Reset Button
- Reduzierte Margins für alle Karten auf Punkte-Seite (0.75rem -> 0.5rem)
- Kompaktere Abstände zwischen Stats-Karten (0.5rem -> 0.4rem)
- Zoom-Reset Button im Footer für alle Seiten hinzugefügt
- Button nur auf mobilen Geräten sichtbar (≤768px)
- Setzt Viewport auf 100% zurück bei versehentlichem Zoomen
- Visuelles Feedback mit Checkmark nach Reset
- Automatisches Zurücksetzen nach 2 Sekunden
- CSS-Anpassungen für Footer mit flexbox Layout
- Bessere Platzausnutzung auf schmalen Displays

--- a/help.html
+++ b/help.html
@@ -188,6 +188,10 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
+            <button class="footer-zoom-btn" id="zoomResetBtn">
+                <i class="fas fa-search-minus"></i>
+                <span>Ansicht auf 100% zurücksetzen</span>
+            </button>
             <p id="commitInfo">Version wird geladen...</p>
         </div>
     </footer>
@@ -236,6 +240,24 @@
         }
         
         applyBottomNavSettings();
+        
+        // Zoom Reset
+        const zoomBtn = document.getElementById('zoomResetBtn');
+        if (zoomBtn) {
+            zoomBtn.addEventListener('click', () => {
+                const viewport = document.querySelector('meta[name="viewport"]');
+                if (viewport) {
+                    viewport.setAttribute('content', 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no');
+                    setTimeout(() => {
+                        viewport.setAttribute('content', 'width=device-width, initial-scale=1.0');
+                    }, 100);
+                }
+                zoomBtn.innerHTML = '<i class="fas fa-check"></i><span>Zurückgesetzt!</span>';
+                setTimeout(() => {
+                    zoomBtn.innerHTML = '<i class="fas fa-search-minus"></i><span>Ansicht auf 100% zurücksetzen</span>';
+                }, 2000);
+            });
+        }
 
         // Menu Toggle
         const menuToggle = document.getElementById('menuToggle');
