--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
+            <button class="footer-zoom-btn" id="zoomResetBtn">
+                <i class="fas fa-search-minus"></i>
+                <span>Ansicht auf 100% zurücksetzen</span>
+            </button>
             <p id="commitInfo">Version wird geladen...</p>
         </div>
     </footer>
