FAQ-Button zum Menü und zur Bottom Navigation hinzugefügt, Population-Comparison-Visualisierung implementiert

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <a href="help.html" class="menu-item">
                         <i class="fas fa-question-circle"></i> Hilfe
                     </a>
+                    <a href="faq.html" class="menu-item">
+                        <i class="fas fa-circle-question"></i> FAQ
+                    </a>
                     <a href="settings.html" class="menu-item">
                         <i class="fas fa-cog"></i> Einstellungen
                     </a>
@@ -202,6 +205,10 @@
             <a href="help.html" class="bottom-nav-item" data-nav="help">
                 <i class="fas fa-question-circle"></i>
                 <span>Hilfe</span>
+            </a>
+            <a href="faq.html" class="bottom-nav-item" data-nav="faq">
+                <i class="fas fa-circle-question"></i>
+                <span>FAQ</span>
             </a>
             <a href="settings.html" class="bottom-nav-item" data-nav="settings">
                 <i class="fas fa-cog"></i>
