--- a/help.html
+++ b/help.html
@@ -32,6 +32,9 @@
                     <a href="points.html" class="menu-item">
                         <i class="fas fa-coins"></i> Punkte
                     </a>
+                    <a href="faq.html" class="menu-item">
+                        <i class="fas fa-circle-question"></i> FAQ
+                    </a>
                     <a href="settings.html" class="menu-item">
                         <i class="fas fa-cog"></i> Einstellungen
                     </a>
@@ -363,6 +366,10 @@
                 <i class="fas fa-question-circle"></i>
                 <span>Hilfe</span>
             </a>
+            <a href="faq.html" class="bottom-nav-item" data-nav="faq">
+                <i class="fas fa-circle-question"></i>
+                <span>FAQ</span>
+            </a>
             <a href="settings.html" class="bottom-nav-item" data-nav="settings">
                 <i class="fas fa-cog"></i>
                 <span>Einstellungen</span>
@@ -399,6 +406,7 @@
             const showHome = localStorage.getItem('bottomNavShowHome') !== 'false';
             const showPoints = localStorage.getItem('bottomNavShowPoints') !== 'false';
             const showHelp = localStorage.getItem('bottomNavShowHelp') !== 'false';
+            const showFaq = localStorage.getItem('bottomNavShowFaq') === 'true';
             const showSettings = localStorage.getItem('bottomNavShowSettings') !== 'false';
             
             if (enabled) {
@@ -420,6 +428,7 @@
                 if (nav === 'home' && !showHome) item.classList.add('hidden');
                 if (nav === 'points' && !showPoints) item.classList.add('hidden');
                 if (nav === 'help' && !showHelp) item.classList.add('hidden');
+                if (nav === 'faq' && !showFaq) item.classList.add('hidden');
                 if (nav === 'settings' && !showSettings) item.classList.add('hidden');
             });
         }
