--- a/settings.html
+++ b/settings.html
@@ -34,6 +34,9 @@
                     <a href="help.html" class="menu-item">
                         <i class="fas fa-question-circle"></i> Hilfe
                     </a>
+                    <a href="faq.html" class="menu-item">
+                        <i class="fas fa-circle-question"></i> FAQ
+                    </a>
                 </div>
             </div>
         </div>
@@ -299,6 +302,10 @@
             <a href="help.html" class="bottom-nav-item" data-nav="help">
                 <i class="fas fa-question-circle"></i>
                 <span>Hilfe</span>
+            </a>
+            <a href="faq.html" class="bottom-nav-item" data-nav="faq">
+                <i class="fas fa-circle-question"></i>
+                <span>FAQ</span>
             </a>
             <a href="settings.html" class="bottom-nav-item current" data-nav="settings">
                 <i class="fas fa-cog"></i>
