--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     </footer>
 
     <script src="world_capitals.js"></script>
+    <script src="coats_of_arms.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
