--- a/settings.html
+++ b/settings.html
@@ -194,6 +194,22 @@
                 </div>
             </div>
 
+            <div class="settings-page-section">
+                <h2><i class="fas fa-shield-halved"></i> Wappen-Sammlung</h2>
+                <div class="settings-card">
+                    <div class="settings-info-box">
+                        <i class="fas fa-shield-alt info-icon"></i>
+                        <div>
+                            <h3>Österreichische Wappen</h3>
+                            <p>Entdecke die vollständige Sammlung aller Bundes- und Stadtwappen Österreichs mit detaillierten Informationen und Suchfunktion.</p>
+                            <a href="wappen.html" class="wappen-link-btn">
+                                <i class="fas fa-arrow-right"></i> Zur Wappen-Übersicht
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="settings-page-section dev-tools-section">
                 <h2><i class="fas fa-code"></i> Entwickler Tools</h2>
                 <div class="settings-card dev-tools-card">
