--- a/wappen.html
+++ b/wappen.html
@@ -154,6 +154,17 @@
 
     <script src="coats_of_arms.js"></script>
     <script>
+        // Theme laden
+        function loadTheme() {
+            const theme = localStorage.getItem('theme') || 'light';
+            if (theme === 'dark') {
+                document.body.classList.add('dark-mode');
+            }
+        }
+        
+        // Theme sofort laden (vor DOMContentLoaded)
+        loadTheme();
+        
         document.addEventListener('DOMContentLoaded', function() {
             setupMenu();
             applyBottomNavSettings();
